--- a/pages/style.css
+++ b/pages/style.css
@@ -1,29 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
-    background-color: #39393A;
-    min-height: 100vh;
+    background-color: #212529;
+    background-image: url(/images/fundo.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    min-height: 100vh
 }
 
 #cabeca {
+    background-color: #111;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     color: #f5f5f5;
+    margin: -8px;
+    min-height: 64px;
 }
 
-.esquerda {
-    font-size: 25px;
-    font-family: 'Poppins', sans-serif;
+#logo {
+    width: 200px;
     margin: 5px 10px;
 }
 
 a {
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
-    font-size: 20px;
+    font-size: 45px;
     color: #b2ddf7;
+    margin: 5px 35px;
 }
 
 .form-center {
