--- a/css/contato.css
+++ b/css/contato.css
@@ -1,3 +1,9 @@
+header{
+    text-align: left;
+    display: block;
+    padding-bottom: 80px;
+}
+
 body{
     background-color: #39393a;
     text-align: center;
