--- a/pages/cadastro.css
+++ b/pages/cadastro.css
@@ -42,6 +42,16 @@ body {
     z-index: 1000;
     max-height: 80px;
     padding: 0 5px;
+    animation: fadeIn 2s;
+  }
+
+  @keyframes fadeIn {
+      from {
+          opacity: 0;  
+      }
+      to {
+          opacity: 1;
+      }
   }
   
   .navBrand {
@@ -121,6 +131,16 @@ body {
       flex-direction: column;
       justify-content: center;
       height: 46em;
+      animation: fadeIn 1.1s;
+    }
+  
+    @keyframes fadeIn {
+        from {
+            opacity: 0;  
+        }
+        to {
+            opacity: 1;
+        }
     }
   
     .formSignUp {
@@ -174,6 +194,16 @@ body {
     footer {
       margin-top: 0;
       padding: 25px;
+      animation: fadeIn 2s;
+    }
+  
+    @keyframes fadeIn {
+        from {
+            opacity: 0;  
+        }
+        to {
+            opacity: 1;
+        }
     }
   
   /* ESTILO DE RESPONSIVIDADE DO FOOTER P/ MOBILE TERMINA AQUI // COPIAR ATÉ AQUI */
