--- a/pages/redefinirSenha.css
+++ b/pages/redefinirSenha.css
@@ -130,8 +130,8 @@ body {
       align-items: center;
       flex-direction: column;
       justify-content: center;
-      height: 46em;
-      max-width: 30em;
+      height: 30em;
+      max-width: 60em;
       animation: fadeIn 1.1s;
     }
   
@@ -180,30 +180,6 @@ body {
       box-shadow: none!important;
       background-color: rgba(17, 17, 17, 0.938);
     }
-
-    .creatAcount {
-        padding: 0;
-        font-size: 20px;
-    }
-
-    .rememberPass {
-        font-size: 13px;
-    }
-
-    .forgetPass {
-        font-size: 13px;
-    }
-
-    .creatAcount a {
-        padding: 0;
-        font-size: 17px;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: #fff;
-    }
-    .creatAcount a:hover {
-        color: #0076c0;
-    }
   
     /* OS EFEITOS E ESTILIZAÇÃO DOS INPUTS TERMINAM AQUI// COPIAR ATÉ AQUI */
   
@@ -214,6 +190,11 @@ body {
       letter-spacing: 1px;
       font-size: 13px!important;
       font-weight: 100!important;
+    }
+
+    #RedefinitionSuccess {
+      display: none;
+      text-align: center;
     }
 
     footer {
@@ -318,10 +299,6 @@ body {
     display: none;
   } 
   
-    .custom-field {
-    display: none;
-  }
-  
     .flexList {
       width: 280px;
       display: flex;
@@ -352,7 +329,7 @@ body {
       align-items: center;
       flex-direction: column;
       justify-content: center;
-      margin: 70px auto;
+      margin: auto;
       height: 35em;
       padding: 0;
     }
@@ -362,14 +339,6 @@ body {
       padding: 0 25px 32px 25px;
       margin-top: 60px;
       margin-bottom: 60px;
-    }
-
-    .rememberPass {
-        font-size: 15px;
-    }
-
-    .forgetPass {
-        font-size: 15px;
     }
 
   
