--- a/pages/style.css
+++ b/pages/style.css
@@ -1,76 +1,280 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 
 body {
-    background-color: #212529;
+  background-color: #212529!important;
     background-image: url(/images/fundo.png);
     background-repeat: no-repeat;
     background-position: right;
-    min-height: 100vh
-}
-
-#cabeca {
-    background-color: #111;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    color: #f5f5f5;
-    margin: -8px;
-    min-height: 64px;
-}
-
-#logo {
-    width: 200px;
-    margin: 5px 10px;
-}
-
-a {
-    text-decoration: none;
     font-family: 'Poppins', sans-serif;
-    font-size: 45px;
-    color: #b2ddf7;
-    margin: 5px 35px;
 }
 
-.form-center {
+body, #button-addon2 {
+  background-color: #b2ddf700;
+  color: #fff;
+}
+
+#button-addon2:hover {
+  background-color: rgba(255, 255, 255, 0);
+  color: #B2DDF7;
+  border-color: #0076c0;
+}
+
+#button-addon2 {
+  width: 100px;
+  border-radius: 0!important;
+  box-shadow: none!important;
+  border: solid 2px rgba(128, 128, 128, 0.534);
+}
+
+.btnMenu {
+  border: none!important;
+  -webkit-appearance: none!important;
+  -ms-appearance: none!important;
+  -moz-appearance: none!important;
+  appearance: none!important;
+  outline: none!important;
+  box-shadow: none!important;
+}
+
+.navbar {
+  position: relative;
+  z-index: 1000;
+  max-height: 80px;
+  padding: 0 5px;
+}
+
+.navBrand {
+  flex-grow: 1;
+}
+
+.logo {
+  width: 170px;
+  height: 80px;
+}
+
+.navbar img {
+  padding: 1px;
+}
+
+ .navbar .buttonList {
+  color: #fff;
+  max-width: 160px;
+  max-height: 165px;
+  background-color: rgba(17, 17, 17, 0.397);
+  position: absolute;
+  top: 75px;
+  left: -250px;
+  height: calc(100vh - 80px);
+  overflow-y: auto;
+  transition: all 0.5s ease-in-out;
+  opacity: .5;
+} 
+
+.navbar.sidebar-open .buttonList {
+  left: -20px;
+  opacity: 1;
+  width: 250px;
+} 
+
+.navbar .buttonList li {
+  padding: 0.4em 0.4em;
+  margin: 0 0 0 28px;
+  cursor: pointer;
+}
+.navbar ul li a {
+  text-decoration: none!important;
+}
+.navbar ul li:hover {
+  color: #B2DDF7;
+}
+
+.flexList {
+  display: none;
+}
+
+#icon {
+  margin: 0 5px 5px 0;
+  padding: 2px;
+}
+
+.searchAndProfile {
+  display: flex!important;
+
+  }
+
+  #profile {
+    margin: 0 0 0 7px;
+  }
+
+  .form-center {
     position: initial;
     min-height: 100vh;
 }
 
-#central {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
+.form-control, .form-select {
+    border: 1px solid rgba(128, 128, 128, 0.425);
+    border-radius: 0!important;
+    background-color: rgba(17, 17, 17, 0.356);
+    color: rgba(128, 128, 128, 0.658);
+    box-shadow: none;
+    font-size: 12px;
+  }
+  
+  .form-control:focus {
+    box-shadow: none!important;
+    background-color: rgba(17, 17, 17, 0.938);
+    transition: 0.9s;
+  }
+  .form-select:focus {
+    box-shadow: none!important;
+    background-color: rgba(17, 17, 17, 0.938);
+  }
+
+  h6 {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 15px!important;
+    font-weight: 100;
+  }
+
+  .input-group {
+    padding: 0% 20%;
 }
 
-#digite{
+@media (min-width: 576px) {
+
+
+  .logo {
+    width: 190px;
+    height: 80px;
+  }
+
+
+  h6 {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 18px!important;
+    font-weight: 100;
+  }
+
+  .navbar .buttonList li {
+  padding: 0.8em 0.4em;
+  margin: 0 0 0 28px;
+  cursor: pointer;;
+}
+
+  .navbar .buttonList {
+    max-width: 160px;
+    max-height: 216px;
+  }
+
+.form-control, .form-select {
+    border: 1px solid rgba(128, 128, 128, 0.425);
+    border-radius: 0!important;
+    background-color: rgba(17, 17, 17, 0.356);
+    color: rgba(128, 128, 128, 0.658);
+    box-shadow: none;
+    font-size: 17px;
+  }
+
+  .input-group {
+    padding: 0% 20%;
+}
+}
+
+@media (min-width: 769px){
+
+  .navbar {
+    margin-bottom: 40px;
+  }
+  .btnMenu {
+    display: none;
+  }
+
+  .navBrand {
+  flex-grow: 0;
+}
+
+  .navbar .buttonList li {
+  padding: 0.8em 0.4em;
+  margin: 0 0 0 28px;
+  cursor: pointer;
+  display: none;
+
+}
+
+  .custom-field {
+  display: none;
+}
+
+  .flexList {
+    width: 280px;
     display: flex;
-    font-family: 'Poppins', sans-serif;
-    font-size: 25px;
-    color: #b2ddf7;
+    margin: 0 0 0 0;  
+    align-items: center;
+    justify-content: space-evenly;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+  }
+  
+  .searchAndProfile {
+  display: flex!important;
+  }
+
+  #profile {
+    margin: 0 0 0 30px;
+  }
+
+  .title-signUp {
+    color: #B2DDF7!important;
+  }
+
+  .signUp {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    flex-direction: row;
+    margin: auto;
+    height: 35em;
+    padding: 0;
+  }
+
+  .formSignUp {
+    background-color: rgba(17, 17, 17, 0.295);
+    padding: 0 25px 32px 25px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+
+  .with-linear-gradient {
+  border-style: solid;
+  border-width: 1px;
+  border-image: linear-gradient(45deg, #0076c0, #daf0fd) 1;
 }
 
-#buscaFilme {
-    width: 450px;
-    height: 50px;
-    -webkit-border-bottom-right-radius: 0;
-    -moz-border-radius-bottomright: 0;
-    border-bottom-right-radius: 0;
-    -webkit-border-top-right-radius: 0;
-    -moz-border-radius-topright: 0;
-    border-top-right-radius: 0;
+.input-group {
+    padding: 0% 20%;
 }
 
-#botao {
-    border: 0;
-    width: 112px;
-    height: 53px;
-    font-size: 15px;
-    font-family: arial;
-    background-color: #b2ddf7;
-    text-decoration-color: #39393A;
-    font-weight: bold;
+  .btn-outline-info {
+  width: 100px;
+  border-radius: 0!important;
+  margin: 30px auto auto auto;
+  border: solid 2px rgba(128, 128, 128, 0.534);
+}
+
+  footer {
+    margin-top: 40px;
+  }
+}
+
+
+@media (min-width: 1200px){
+
+  .logo {
+    width: 250px;
+    height: 100px;
+  }
 }
