--- a/pages/buscafilme.css
+++ b/pages/buscafilme.css
@@ -3,9 +3,10 @@
 
 body {
   background-color: #212529!important;
-  background-image: url(/images/fundo.png);
+  background-image: url(../images/fundo.png);
   background-repeat: no-repeat;
   background-position: right;
+  background-position-y: top;
   font-family: 'Poppins', sans-serif;
   height: 100vh;
 }
@@ -44,6 +45,16 @@ body, .btn-outline-info {
   z-index: 1000;
   max-height: 80px;
   padding: 0 5px;
+  animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;  
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .navBrand {
@@ -53,6 +64,7 @@ body, .btn-outline-info {
 .logo {
   width: 170px;
   height: 80px;
+  margin-left: 12px;
 }
 
 .navbar img {
@@ -102,7 +114,7 @@ body, .btn-outline-info {
 
 .searchAndProfile {
   display: flex!important;
-
+  margin-right: 12px;
   }
 
   #profile {
@@ -144,19 +156,40 @@ body, .btn-outline-info {
     background-color: rgba(17, 17, 17, 0.938);
   }
 
-  #container-infos{
-    margin:40px auto;
+  #inputGroup {
+    animation: fadeIn 1.1s;
+  }
+
+  @keyframes fadeIn {
+      from {
+          opacity: 0;  
+      }
+      to {
+          opacity: 1;
+      }
   }
 
   #imgdiv{
     margin-bottom: 20px;
   }
 
+  #container-infos{
+    margin: 50px auto;
+  }
+
+  #actor-p {
+    font-size: 15px;
+  }
+
+  #infos-p {
+    font-size: 15px;
+  }
+
   h6 {
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 15px!important;
-    font-weight: 100;
+    font-weight: 100!important;
   }
 
   footer {
@@ -164,15 +197,14 @@ body, .btn-outline-info {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    /* position: absolute; */
-    bottom: 0;
+    padding: 25px;
   }
 
 
 @media (min-width: 576px) {
 
   #movie {
-    max-width: 500px;
+    max-width: 538px;
   }
 
   #inputGroup {
@@ -185,11 +217,20 @@ body, .btn-outline-info {
     height: 400px;
     border: none!important;
     box-shadow: none!important;
+    
   }
 
   #imgdiv {
     border: none!important;
     box-shadow: none!important;
+  }
+
+  #actor-p {
+    font-size: 20px;
+  }
+
+  #infos-p {
+    font-size: 20px;
   }
 
 
