--- a/css/contato.css
+++ b/css/contato.css
@@ -4,16 +4,6 @@ body{
     font-family: 'Poppins', sans-serif
 }
 
-h1{
-  text-align: center;
-  margin-top: 100px;
-}
-
-#imagens{
-    padding: 50px;
-    margin-left: 500px;
-}
-
 .main-btn {
     background-color: #b2ddf7;
     color: #212529;
@@ -132,47 +122,38 @@ body, .btn-outline-info {
 }
 
 .searchAndProfile {
-  display: flex!important;
+display: flex!important;
 
   }
 
   #profile {
-    margin: 0 0 0 7px;
+  margin: 0 0 0 7px;
+  }
+    
+  h1{
+  text-align: center;
+  margin-top: 100px;
+  font-weight: 200;
+  color: #b2ddf7;
   }
 
-  .form-control, .form-select {
-      border: 1px solid rgba(128, 128, 128, 0.425);
-      border-radius: 0!important;
-      background-color: rgba(17, 17, 17, 0.356);
-      color: rgba(128, 128, 128, 0.658);
-      box-shadow: none;
-      font-size: 12px;
-       }
-    
-    input {
-      color: #fff!important;
-    }
-  
-    .form-control:focus {
-      box-shadow: none!important;
-      background-color: rgba(17, 17, 17, 0.938);
-      transition: 0.9s;
-    }
-    .form-select:focus {
-      box-shadow: none!important;
-      background-color: rgba(17, 17, 17, 0.938);
-    }
+  .imgCard {
+    max-width: 50px;
+    max-height: 50px;
+  }
+
+  #photo {
+    width: 100px;
+    height: 100px;
+  }
+
+
 
      
     @media (min-width: 576px) {
       .logo {
           width: 190px;
           height: 80px;
-        }
-        h6 {
-          text-transform: uppercase;
-          letter-spacing: 1px;
-          font-size: 15px!important;
         }
   
         .navbar .buttonList li {
@@ -184,15 +165,6 @@ body, .btn-outline-info {
           .navbar .buttonList {
             max-width: 160px;
             max-height: 216px;
-          }
-        
-        .form-control, .form-select {
-            border: 1px solid rgba(128, 128, 128, 0.425);
-            border-radius: 0!important;
-            background-color: rgba(17, 17, 17, 0.356);
-            color: rgba(128, 128, 128, 0.658);
-            box-shadow: none;
-            font-size: 17px;
           }
         }
         
@@ -215,10 +187,7 @@ body, .btn-outline-info {
             display: none;
           
           }
-          
-            .custom-field {
-            display: none;
-          }
+        
           
             .flexList {
               width: 280px;
@@ -237,33 +206,7 @@ body, .btn-outline-info {
           
             #profile {
               margin: 0 0 0 30px;
-            } 
-            .title-signUp {
-              color: #B2DDF7!important;
             }
-          
-            .signUp {
-              display: flex;
-              align-items: center;
-              flex-direction: column;
-              justify-content: center;
-              margin: auto;
-              height: 35em;
-              padding: 0;
-            }
-          
-            .formSignUp {
-              background-color: rgba(17, 17, 17, 0.295);
-              padding: 0 25px 32px 25px;
-              margin-top: 60px;
-              margin-bottom: 60px;
-            }
-          
-            .with-linear-gradient {
-            border-style: solid;
-            border-width: 1px;
-            border-image: linear-gradient(45deg, #0076c0, #daf0fd) 1;
-          }
           
             .btn-outline-info {
             width: 100px;
