--- a/css/sobre.css
+++ b/css/sobre.css
@@ -138,17 +138,47 @@ body, .btn-outline-info {
     align-content: center;
     justify-content: center;
     align-items: center;
+    animation: fadeIn 2s;
+  }
+
+  @keyframes fadeIn {
+      from {
+          opacity: 0;  
+      }
+      to {
+          opacity: 1;
+      }
   }
 
   #resi-pic {
     display: flex;
     justify-content: center;
     margin-bottom: 35px;
+    animation: fadeIn 1.1s;
+  }
+
+  @keyframes fadeIn {
+      from {
+          opacity: 0;  
+      }
+      to {
+          opacity: 1;
+      }
   }
 
   #pic {
     width: 65%;
     margin-top: 40px;
+    animation: fadeIn 1.1s;
+  }
+
+  @keyframes fadeIn {
+      from {
+          opacity: 0;  
+      }
+      to {
+          opacity: 1;
+      }
   }
 
   #resi-info {
@@ -158,17 +188,48 @@ body, .btn-outline-info {
     justify-content: center;
     align-items: center;
     background-color: #212529a8;
+    animation: fadeIn 1.1s;
+  }
+
+  @keyframes fadeIn {
+      from {
+          opacity: 0;  
+      }
+      to {
+          opacity: 1;
+      }
   }
 
   #resi-title{
     font-size: 30px;
     font-weight: 200;
+    animation: fadeIn 1.1s;
   }
+
+  @keyframes fadeIn {
+      from {
+          opacity: 0;  
+      }
+      to {
+          opacity: 1;
+      }
+  }
+
   #first-p {
     padding: 29px 0px 16px 0px;
     font-size: 18px;
     font-weight: 100;
     line-height: 1.5;
+    animation: fadeIn 1.1s;
+  }
+
+  @keyframes fadeIn {
+      from {
+          opacity: 0;  
+      }
+      to {
+          opacity: 1;
+      }
   }
 
   #ter-p{
@@ -176,11 +237,31 @@ body, .btn-outline-info {
     font-size: 15px;
     line-height: 1.5;
     font-weight: 100;
-  }
+  animation: fadeIn 1.1s;
+    }
+  
+    @keyframes fadeIn {
+        from {
+            opacity: 0;  
+        }
+        to {
+            opacity: 1;
+        }
+    }
 
   #sec-p{
     font-size: 15px;
     font-weight: 100;
+    animation: fadeIn 1.1s;
+  }
+
+  @keyframes fadeIn {
+      from {
+          opacity: 0;  
+      }
+      to {
+          opacity: 1;
+      }
   }
 
 @media (min-width: 576px) {
